Revamped Kit Structure

--- a/index.cfg
+++ b/index.cfg
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration kit="LightBank" version="0.1">
-<import>scripts</import>
+<import>kit_LightBank:</import>
 </configuration>
