Kit enhancements, code refinements
Added 'LightBank' button to the Modo Modes toolbars, with icon. Renamed
functions for improved sorting and readability. Fixed a bug with a
missing identContainer widget.

--- a/index.cfg
+++ b/index.cfg
@@ -1,4 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <configuration kit="LightBank" version="0.1">
-<import>kit_LightBank:</import>
+
+	<import>kit_LightBank:</import>
+
+	<atom type="Frame">
+		<hash type="Layout" key="base.LightBankLayout" val="applicationLayout">
+			<atom type="IdealSize">400 600</atom>
+			<list type="Port">customview 0 1 0 1 LightBankViewport</list>
+			<atom type="SwitcherClass">normal</atom>
+		</hash>
+
+		<hash type="customview" key="base.LightBankViewport" val="listed">
+			<atom type="Identifier">68089417765:customview</atom>
+			<atom type="Server">LightBank</atom>
+			<atom type="ViewportLock2">0 0</atom>
+			<atom type="MinHeader">1</atom>
+			<atom type="QuadLock">0</atom>
+			<atom type="ViewportTitle">LightBankViewport</atom>
+			<atom type="ViewportClass">vpapplication</atom>
+		</hash>
+	</atom>
+
+	<atom type="UIElements">
+		<hash type="Image" key="lbIcon">kit_LightBank:resrc/lb_20.png</hash>
+		<hash type="Icon" key="lightbank.show_20">
+		<atom type="Source">lbIcon</atom>
+		<atom type="Location">0 0 20 20</atom>
+		</hash>
+	</atom>
+
+	<atom type="Attributes">
+		<hash type="Sheet" key="71166420426:sheet">
+		<atom type="Label">LightBank</atom>
+		<atom type="Tooltip">Open LightBank in a new floating palette.</atom>
+		<atom type="Desc">Open LightBank in a new floating palette.</atom>
+		<atom type="Layout">htoolbar</atom>
+		<atom type="Justification">left</atom>
+		<atom type="IconMode">both</atom>
+		<atom type="IconSize">small</atom>
+
+		<hash type="InCategory" key="frm_AnimateModesToolbar:sheet#tail">
+			<atom type="Ordinal">49.50.53</atom>
+		</hash>
+		<hash type="InCategory" key="frm_LayoutModesToolbar:sheet#tail">
+			<atom type="Ordinal">49.50.53</atom>
+		</hash>
+		<hash type="InCategory" key="frm_ModoModesToolbar:sheet#tail">
+			<atom type="Ordinal">49.50.53</atom>
+		</hash>
+		<hash type="InCategory" key="frm_RenderModesToolbar:sheet#tail">
+			<atom type="Ordinal">49.50.53</atom>
+		</hash>
+
+		<list type="Control" val="cmd lightbank.show">
+		<atom type="Label">LightBank</atom>
+		<atom type="StartCollapsed">0</atom>
+		<atom type="Hash">23668419980:control</atom>
+		</list>
+		</hash>
+	</atom>
+
 </configuration>
