Tweaks to form setup
Added LightBank button Modo Modes Tail form. Changed the layout type
from app-level to viewport level.

--- a/index.cfg
+++ b/index.cfg
@@ -4,13 +4,13 @@
 	<import>kit_LightBank:</import>
 
 	<atom type="Frame">
-		<hash type="Layout" key="base.LightBankLayout" val="applicationLayout">
+		<hash type="Layout" key="base.LightBankLayout" val="vpLayout">
 			<atom type="IdealSize">400 600</atom>
 			<list type="Port">customview 0 1 0 1 LightBankViewport</list>
 			<atom type="SwitcherClass">normal</atom>
 		</hash>
 
-		<hash type="customview" key="base.LightBankViewport" val="listed">
+		<hash type="customview" key="base.LightBankViewport" val="unlisted">
 			<atom type="Identifier">68089417765:customview</atom>
 			<atom type="Server">LightBank</atom>
 			<atom type="ViewportLock2">0 0</atom>
@@ -36,19 +36,10 @@
 		<atom type="Desc">Open LightBank in a new floating palette.</atom>
 		<atom type="Layout">htoolbar</atom>
 		<atom type="Justification">left</atom>
-		<atom type="IconMode">both</atom>
+		<atom type="IconMode">icon</atom>
 		<atom type="IconSize">small</atom>
 
-		<hash type="InCategory" key="frm_AnimateModesToolbar:sheet#tail">
-			<atom type="Ordinal">49.50.53</atom>
-		</hash>
-		<hash type="InCategory" key="frm_LayoutModesToolbar:sheet#tail">
-			<atom type="Ordinal">49.50.53</atom>
-		</hash>
-		<hash type="InCategory" key="frm_ModoModesToolbar:sheet#tail">
-			<atom type="Ordinal">49.50.53</atom>
-		</hash>
-		<hash type="InCategory" key="frm_RenderModesToolbar:sheet#tail">
+		<hash type="InCategory" key="modoModesTail#tail">
 			<atom type="Ordinal">49.50.53</atom>
 		</hash>
 
