--- a/index.cfg
+++ b/index.cfg
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<configuration kit="LightBank" version="0.1">
+<configuration kit="LightBank" version="0.3">
 
 	<import>kit_LightBank:</import>
 
@@ -16,7 +16,7 @@
 			<atom type="ViewportLock2">0 0</atom>
 			<atom type="MinHeader">1</atom>
 			<atom type="QuadLock">0</atom>
-			<atom type="ViewportTitle">LightBankViewport</atom>
+			<atom type="ViewportTitle">LightBank</atom>
 			<atom type="ViewportClass">vpapplication</atom>
 		</hash>
 	</atom>
